--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map-Project</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/jquery-3.2.0.min.js"></script>
 </head>
 <body>
+    <button id="nav-button">Nav</button>
+    <ul id="nav-panel">
+        <li>Close Panel</li>
+        <li>Show Listings</li>
+        <li>Hide Listings</li>
+    </ul>
     <div id="map"></div>
     <script src="js/main.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcQM53TCgc_HnLzm4sbGN03GAqTMFPAKk&callback=initMap"></script>
