--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <li>Close Panel</li>
         <li>Show Listings</li>
         <li>Hide Listings</li>
+        <li>Night Mode</li>
     </ul>
     <div id="map"></div>
     <script src="js/main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcQM53TCgc_HnLzm4sbGN03GAqTMFPAKk&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQwGrxv0G8j-tHGDB5MVP5Xg5ls0ULHZk&callback=initMap"></script>
 </body>
 </html>
