--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     </div>
     <ul id="nav-panel">
         <li>Close Panel</li>
-        <li id="search-box"><input type="search" placeholder="Search..."></li>
+        <li id="search-box"><input id='search-area-text' type="search" placeholder="Search..."></li>
         <li id="show-listings">Show Listings</li>
         <li id="hide-listings">Hide Listings</li>
-        <li id="night-mode">Night Mode</li>
+        <li id="toggle-drawing">Toggle Drawing</li>
+        <li id="night-mode">Toggle Night Mode</li>
     </ul>
     <div id="map"></div>
     <script src="js/main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcQM53TCgc_HnLzm4sbGN03GAqTMFPAKk&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyAQwGrxv0G8j-tHGDB5MVP5Xg5ls0ULHZk&callback=initMap"></script>
 </body>
 </html>
