Add waypoints function add clear waypoints and markers function

--- a/index.html
+++ b/index.html
@@ -40,13 +40,22 @@
             <input id="search-within-time-text" type="text" placeholder="Ex: Google Office NYC or 75 9th Ave, New York, NY">
             <button id="search-within-time" onclick="searchWithinTime()">Go</button>
         </div>
+        <p style="color: white;">ADD WAYPOINTS</p>
+        <div class="flex-box">
+            <input id="waypoints-text" type="text" placeholder="Ex: Google Office NYC or 75 9th Ave, New York, NY">
+            <button id="add-waypoints" onclick="addWaypoints()">Add</button>
+        </div>
         <li v-on:click="showListings">Show Listings</li>
         <li v-on:click="hideListings">Hide Listings</li>
         <li v-on:click="toggleDrawing">Toggle Drawing</li>
         <li v-on:click="toggleNightMode">Toggle Night Mode</li>
+        <div class="flex-box" style="position: absolute; bottom: 0;">
+            <button style="padding: 6px; height: 100%; margin-right: 4px;" onclick="clearMarkers()">Clear Markers</button>
+            <button style="padding: 6px; height: 100%;" onclick="clearWaypoints()">Clear Waypoints</button>
+        </div>
     </ul>
     <div id="map"></div>
     <script src="js/main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyDcQM53TCgc_HnLzm4sbGN03GAqTMFPAKk&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyDcQM53TCgc_HnLzm4sbGN03GAqTMFPAKk&callback=initMap"></script>
 </body>
 </html>
