--- a/index.html
+++ b/index.html
@@ -45,17 +45,22 @@
             <input id="waypoints-text" type="text" placeholder="Ex: Google Office NYC or 75 9th Ave, New York, NY">
             <button id="add-waypoints" onclick="addWaypoints()">Add</button>
         </div>
+        <p style="color: white;">SEARCH FOR NEARBY PLACES</p>
+        <div class="flex-box">
+            <input id="search-places" type="text" placeholder="Ex: Pizza delivery in NYC">
+            <button id="go-places">Go</button>
+        </div>
         <li v-on:click="showListings">Show Listings</li>
-        <li v-on:click="hideListings">Hide Listings</li>
+        <li v-on:click="hideMarkers">Hide Listings</li>
         <li v-on:click="toggleDrawing">Toggle Drawing</li>
         <li v-on:click="toggleNightMode">Toggle Night Mode</li>
-        <div class="flex-box" style="position: absolute; bottom: 0;">
-            <button style="padding: 6px; height: 100%; margin-right: 4px;" onclick="clearMarkers()">Clear Markers</button>
-            <button style="padding: 6px; height: 100%;" onclick="clearWaypoints()">Clear Waypoints</button>
+        <div class="flex-box full-width" style="position: absolute; bottom: 0;">
+            <button style="height: 100%; margin-right: 10px;" onclick="clearMarkers()">Clear Markers</button>
+            <button style="height: 100%;" onclick="clearWaypoints()">Clear Waypoints</button>
         </div>
     </ul>
     <div id="map"></div>
     <script src="js/main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyDcQM53TCgc_HnLzm4sbGN03GAqTMFPAKk&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyAQwGrxv0G8j-tHGDB5MVP5Xg5ls0ULHZk&callback=initMap"></script>
 </body>
 </html>
